--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
